Created favicon.ico and added in the start of the photo list display in our server.java and PhotoList.handlebars

--- a/assets/public/Style Sheet.css
+++ b/assets/public/Style Sheet.css
@@ -16,9 +16,23 @@ p {
     text-align: left;
 }
 p1 {
-    font-family: "Times New Roman",fantasy;
+    font-family: "Times New Roman", fantasy;
     color: cornflowerblue;
     font-size: x-large;
+    text-align: left;
+}
+
+p2 {
+    font-family: "Times New Roman",fantasy;
+    color: whitesmoke;
+    font-size: x-large;
+    text-align: left;
+}
+
+p3 {
+    font-family: "Times New Roman",fantasy;
+    color: whitesmoke;
+    font-size: medium;
     text-align: left;
 }
 
