--- a/assets/templates/login.handlebars
+++ b/assets/templates/login.handlebars
@@ -5,5 +5,6 @@
     <input type="password" name="password" placeholder="password">
     <input type="submit" value="Login" class="btn float-right login_btn">
 </form>
+<p method="post" action="/display">Hello World</p>
 </body>
 </html>
