added photo label get in server with half post

--- a/assets/templates/LabelPhoto.handlebars
+++ b/assets/templates/LabelPhoto.handlebars
@@ -1,8 +1,15 @@
 <html>
 <body>
-<form method="post" action="/addDataToPhoto">
+<table>
+  <form method="post" action="/addDataToPhoto">
     <input type="text" name="title" placeholder="title">
-    <input type="submit" value="Login" class="btn float-right login_btn">
-</form>
+    <input type="text" name="description" placeholder="description">
+    <input type="text" name="date" placeholder="date">
+    <input type="text" name="subject" placeholder="subject">
+    <input type="text" name="hanover subject" placeholder="hanover subject">
+    <input type="text" name="location" placeholder="location">
+    <input type="submit" value="Submit" class="btn float-right login_btn">
+  </form>
+</table>
 </body>
 </html>
